--- a/gmap.html
+++ b/gmap.html
@@ -32,15 +32,14 @@
         color:#333;
       }
     </style>
-    <script src="//ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js">
+    <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js">
     </script>
-    <script type="text/javascript"
-      src="https://maps.googleapis.com/maps/api/js">
-    </script>
+    <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js"></script>
+    <script type="text/javascript" src="http://mapstraction.com/mxn/build/latest/mxn.js?(googlev3)" ></script>
     <script type="text/javascript">
     map=null;
-    CenterLat=45.0;
-    CenterLon=9.0;
+    CenterLat=51.5; //45.0;
+    CenterLon=0.0; //9.0;
     Planes={};
     NumPlanes = 0;
     Selected=null
@@ -107,11 +106,19 @@
 
                 if (Planes[plane.hex]) {
                     var myplane = Planes[plane.hex];
-                    marker = myplane.marker;
+                    var marker = myplane.marker;
+		    map.removeMarker(marker);
+		/*
                     var icon = marker.getIcon();
                     var newpos = new google.maps.LatLng(plane.lat, plane.lon);
                     marker.setPosition(newpos);
                     marker.setIcon(getIconForPlane(plane));
+		*/
+                    var point = new mxn.LatLonPoint(plane.lat, plane.lon);
+		    var mark = new mxn.Marker(point);
+		    map.addMarker(mark);
+                    myplane.marker = mark;
+
                     myplane.altitude = plane.altitude;
                     myplane.speed = plane.speed;
                     myplane.lat = plane.lat;
@@ -121,42 +128,55 @@
                     if (myplane.hex == Selected)
                         refreshSelectedInfo();
                 } else {
-                    marker = new google.maps.Marker({
+		/*
+		    marker = new google.maps.Marker({
                         position: new google.maps.LatLng(plane.lat, plane.lon),
                         map: map,
                         icon: getIconForPlane(plane)
                     });
+		*/
+                    var point = new mxn.LatLonPoint(plane.lat, plane.lon);
+		    var marker = new mxn.Marker(point);
+		    map.addMarker(marker);
+
                     plane.marker = marker;
                     marker.planehex = plane.hex;
                     Planes[plane.hex] = plane;
 
                     /* Trap clicks for this marker. */
-                    google.maps.event.addListener(marker, 'click', selectPlane);
+                    // google.maps.event.addListener(marker, 'click', selectPlane);
                 }
-                if (plane.flight.length == 0)
-                    marker.setTitle(plane.hex)
-                else
-                    marker.setTitle(plane.flight+' ('+plane.hex+')')
+                if (plane.flight.length == 0) {
+                    marker.setLabel(plane.hex);
+		    }
+                else {
+                    marker.setLabel(plane.flight+' ('+plane.hex+')');
+		}
             }
             NumPlanes = data.length;
 
             /* Remove idle planes. */
             for (var p in Planes) {
                 if (!stillhere[p]) {
-                    Planes[p].marker.setMap(null);
-                    delete Planes[p];
+                    // Planes[p].marker.setMap(null);
+                    // delete Planes[p];
                 }
             }
         });
     }
 
     function initialize() {
+/*
         var mapOptions = {
             center: new google.maps.LatLng(CenterLat, CenterLon),
             zoom: 5,
             mapTypeId: google.maps.MapTypeId.ROADMAP
         };
         map = new google.maps.Map(document.getElementById("map_canvas"), mapOptions);
+*/
+		map = new mxn.Mapstraction('map_canvas', 'googlev3'); 
+		var point = new mxn.LatLonPoint(CenterLat, CenterLon);
+		map.setCenterAndZoom(point, 10);
 
         /* Setup our timer to poll from the server. */
         window.setInterval(function() {
